<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/etScanFolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pref_root_folder_hint"
        android:inputType="text" />

    <CheckBox
        android:id="@+id/cbScanRecursive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:text="@string/include_subfolders" />

    <EditText
        android:id="@+id/etScanExtensions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/pref_extensions"
        android:inputType="text" />

</LinearLayout>
